--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Best products</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
+    <link rel="canonical" href="https://pallaviscipy.github.io/sugarpop/">
 
     <!-- CDN plugIn for Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
