--- a/index.html
+++ b/index.html
@@ -21,8 +21,108 @@
   gtag('js', new Date());
 
   gtag('config', 'G-Q1X5WD1ZSS');
+  
 </script>
-  </head>
+ 
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "SugarPop",
+  "url": "https://pallaviscipy.github.io/sugarpop/",
+  "publisher": {
+    "@type": "Organization",
+    "name": "Riqardo",
+    "logo": {
+      "@type": "ImageObject",
+      "url": "https://pallaviscipy.github.io/sugarpop/logo.png"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "telephone": "+44-123-456-789",
+      "contactType": "customer service",
+      "email": "Mail@Kayoo.com",
+      "areaServed": "Worldwide",
+      "availableLanguage": ["English"]
+    },
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Long Street 24",
+      "addressLocality": "Los Angeles",
+      "addressCountry": "US"
+    }
+  },
+  "sameAs": [],
+  "mainEntity": {
+    "@type": "WebPage",
+    "name": "Home",
+    "url": "https://pallaviscipy.github.io/sugarpop/",
+    "description": "Start From Wood We Make A Creativity - Custom wood crafting, creativity, and professional products."
+  },
+  "hasPart": [
+    {
+      "@type": "WebPage",
+      "name": "About Us",
+      "url": "https://pallaviscipy.github.io/sugarpop/about"
+    },
+    {
+      "@type": "WebPage",
+      "name": "Contact Us",
+      "url": "https://pallaviscipy.github.io/sugarpop/contact"
+    },
+    {
+      "@type": "WebPage",
+      "name": "Demo",
+      "url": "https://pallaviscipy.github.io/sugarpop/demo"
+    },
+    {
+      "@type": "Service",
+      "name": "Custom Craft Wood Products",
+      "description": "We can make custom craft wood products including Cafe & Restaurant Table Sets.",
+      "provider": {
+        "@type": "Organization",
+        "name": "Riqardo"
+      }
+    },
+    {
+      "@type": "FAQPage",
+      "mainEntity": [
+        {
+          "@type": "Question",
+          "name": "Why Choice Us?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "We provide big creativity, professional crafting, and years of experience."
+          }
+        },
+        {
+          "@type": "Question",
+          "name": "How Does We Work?",
+          "acceptedAnswer": {
+            "@type": "Answer",
+            "text": "Our crafting steps include Choice Wood, Designing, and Building with creativity."
+          }
+        }
+      ]
+    },
+    {
+      "@type": "Blog",
+      "name": "Blog Spot",
+      "blogPost": [
+        {
+          "@type": "BlogPosting",
+          "headline": "Tip Saving The Wood Long Time",
+          "description": "Learn how to save wood for a long time with simple care techniques.",
+          "url": "https://pallaviscipy.github.io/sugarpop/blog/wood-care"
+        }
+      ]
+    }
+  ]
+}
+</script>
+
+<meta name="msvalidate.01" content="2CFE421A223FB5F46E022045CDFA295A" />
+</head>
   <body>
     <header>
       <div class="header-main">
